# inspire-json-merger

./: .editorconfig  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  RELEASE-NOTES.rst  pytest.ini  requirements.txt  ruff.toml  run-tests.sh  setup.cfg  setup.py
.github/actions/install-python-dependencies/: action.yml
.github/actions/run-tests/: action.yml
.github/workflows/: build-and-release.yml  bump-and-publish.yml  publish.yml  pull-request-master.yml  push-master.yml  test-python-2.yml  test-python-3.yml
.tx/: config
docs/: Makefile  api.rst  conf.py  configuration.rst  index.rst  make.bat  usage.rst
examples/: app.py  author_comparator.py
inspire_json_merger/: __init__.py  api.py  comparators.py  config.py  ext.py  inspire_json_merger.py  merger_config.py  postprocess.py  pre_filters.py  utils.py  version.py  views.py
inspire_json_merger/templates/inspire_json_merger/: index.html
inspire_json_merger/utils/: __init__.py  filterout_utils.py  utils.py
tests/: conftest.py  test_examples_app.py  test_inspire_json_merger.py
tests/fixtures/arxiv2arxiv/: expected_conflict.json  expected_merged.json  head.json  root.json  update.json
tests/fixtures/pub2arxiv/: expected_conflict.json  expected_conflict_filtered.json  expected_merged.json  head.json  update.json
tests/fixtures/pub2pub/: expected_conflict.json  expected_merged.json  head.json  update.json
tests/integration/: test_arxiv2arxiv.py  test_json_merger.py
tests/unit/: test_api.py  test_comparators.py  test_filterout_utils.py  test_inspire_json_merger.py  test_merger.py  test_merger_arxiv2arxiv.py  test_postprocess.py  test_pre_filters.py  test_utils.py
tests/unit/test_data/: conflicts.json  (+4 more)
tests/utils/: utils.py
