# -*- coding: utf-8 -*-
#
# This file is part of Inspire.
# Copyright (C) 2017 CERN.
#
# Inspire is free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 2 of the
# License, or (at your option) any later version.
#
# Inspire is distributed in the hope that it will be
# useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Inspire; if not, write to the
# Free Software Foundation, Inc., 59 Temple Place, Suite 330, Boston,
# MA 02111-1307, USA.
#
# In applying this license, CERN does not
# waive the privileges and immunities granted to it by virtue of its status
# as an Intergovernmental Organization or submit itself to any jurisdiction.

[aliases]
test = pytest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[compile_catalog]
directory = inspire_json_merger/translations/

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = admin@inspirehep.net
mapping-file = babel.ini
output-file = inspire_json_merger/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = inspire_json_merger/translations/messages.pot
output-dir = inspire_json_merger/translations/

[update_catalog]
input-file = inspire_json_merger/translations/messages.pot
output-dir = inspire_json_merger/translations/

[metadata]
description-file = README.rst
